# Prediction-Market

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci-cd.yml
contracts/market_factory/: Cargo.toml
contracts/market_factory/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/prediction_market/: Cargo.toml
contracts/prediction_market/src/: lib.rs
contracts/prediction_token/: Cargo.toml
contracts/prediction_token/src/: lib.rs
docs/screenshots/: README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: BetModal.tsx  CricketMarket.tsx  MarketCard.tsx  Navbar.tsx
frontend/src/hooks/: useMarkets.ts  useTokenBalance.ts  useWallet.ts  useXlmBalance.ts
frontend/src/lib/: stellar.ts
frontend/src/pages/: CreateMarketPage.tsx  HomePage.tsx  MarketPage.tsx  OraclePage.tsx
scripts/: create_market.sh  deploy.sh
test/: test_prediction_market.rs
