[workspace]
members = [
    "contracts/prediction_token",
    "contracts/market_factory",
    "contracts/prediction_market",
    "contracts/oracle",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
